syntax = "proto3";
package productPackage;

message CreateProduct {
    string title = 1;
    string description = 2;
    repeated string images = 3;
    repeated string tags = 4;
    string category = 5;
    int32 price = 6;
    string supplier = 7;
    int32 count = 8;
}

message Product {
    string title = 1;
    string description = 2;
    repeated string images = 3;
    repeated string tags = 4;
    string category = 5;
    int32 price = 6;
    string supplier = 7;
    int32 count = 8;
    string _id = 9;
}

message ProductId {
    string id = 1;
}

message Response {
    string status = 1;
}

service ProductService {
    rpc createProduct (CreateProduct) returns (Response);
    rpc updateProduct (Product) returns (Response);
    rpc getProduct (ProductId) returns (Product);
}
